--- a/greenhome/pubspec.yaml
+++ b/greenhome/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
+  image_picker: ^1.0.7
+  http: ^1.2.1
   flutter:
     sdk: flutter
   http: ^1.2.1
